# cppw67render-implement

./: .gitmodules  CMakeLists.txt  main.cpp  simplifier.cpp
